--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eccrypto",
   "version": "1.1.1",
   "description": "JavaScript Elliptic curve cryptography library",
-  "main": "index.js",
+  "main": "browser.js",
   "browser": "browser.js",
   "scripts": {
     "install": "node-gyp rebuild || exit 0",
