--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eccrypto",
-  "version": "1.1.1",
+  "version": "1.1.1b1",
   "description": "JavaScript Elliptic curve cryptography library",
-  "main": "browser.js",
+  "main": "index.js",
   "browser": "browser.js",
   "scripts": {
     "install": "node-gyp rebuild || exit 0",
