--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eccrypto",
-  "version": "1.1.3b1",
+  "version": "1.1.3-b1",
   "description": "JavaScript Elliptic curve cryptography library",
   "main": "index.js",
   "browser": "browser.js",
